--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <arrow.version>5.0.0</arrow.version>
+    <arrow.version>2.0.0</arrow.version>
     <spark.version>3.1.1</spark.version>
     <dep.slf4j.version>1.7.25</dep.slf4j.version>
   </properties>
@@ -157,10 +157,10 @@
                   <pattern>com.google.protobuf</pattern>
                   <shadedPattern>cdap.com.google.protobuf</shadedPattern>
                 </relocation>
-                <relocation>
-                  <pattern>org.apache.arrow</pattern>
-                  <shadedPattern>cdap.org.apache.arrow</shadedPattern>
-                </relocation>
+<!--                <relocation>-->
+<!--                  <pattern>org.apache.arrow</pattern>-->
+<!--                  <shadedPattern>cdap.org.apache.arrow</shadedPattern>-->
+<!--                </relocation>-->
                 <relocation>
                   <pattern>io.grpc</pattern>
                   <shadedPattern>cdap.io.grpc</shadedPattern>
@@ -320,12 +320,14 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>2.12.2</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
       <version>2.12.2</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
